<resources>
    <string name="app_name">MathProblem_CASTRO</string>
    <string name="add">Addition</string>
    <string name="sub">Subtraction</string>
    <string name="multiply">Multiplication</string>
    <string name="division">Division</string>
    <string name="no1">Enter 1st Number</string>
    <string name="no2">Enter 2nd Number</string>
    <string name="no3">Enter 3rd Number</string>
    <string name="answer">Answer:</string>
    <string name="txt_compute_result">Showing Result(s)</string>
    <string name="txt_demo">Close</string>
</resources>